--- a/src/static/templates/ecommerce/home.html
+++ b/src/static/templates/ecommerce/home.html
@@ -313,10 +313,8 @@
             
         
         {% for propiedad in propiedades %}
-        {{propiedad}}
-        {{propiedad.image}}
         <div class="col-md-4 property-card">
-            <img class="img-responsive" src="{{propiedad.image.image.url}}">
+            <img class="img-responsive" src="{{propiedad.imagen.image.url}}">
             <div style="background-color: #f1f1f1; padding: 3%;">
                 <h1 style="font-size: 20pt;">{{propiedad.nombre}}</h1>
                 <p style="text-align: justify;">{{propiedad.direccion}}</p>
@@ -353,7 +351,6 @@
         <div class="row" style="margin-top: 3%; margin-bottom: 3%;">
             
             {% for agente in agentes %}
-            {{agente.user.last_surname}}
             <div class="col-md-4">
                 <div class="row">
                     <div class="col-lg-12 d-flex justify-content-center">
